some fixes to spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,54 @@
+/*--------------------------------------CSS RESET START--------------------------------------------------*/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/*--------------------------------------CSS RESET END--------------------------------------------------*/
+/*--------------------------------------FONT SETUP START--------------------------------------------------*/
 @font-face {
   font-family: 'Pokemon Solid';
   src: url('fonts/PokemonSolidNormal.eot');
@@ -21,6 +72,8 @@
   font-weight: normal;
   font-style: normal;
 }
+/*--------------------------------------FONT SETUP END--------------------------------------------------*/
+/*--------------------------------------BODY START--------------------------------------------------*/
 
 
 .App {
@@ -28,10 +81,11 @@
   background-color:black;
   display:grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 4.895fr;
+  grid-template-rows: 1fr 10fr;
   grid-area: center;
-
+  padding-bottom: 14.3%;
 }
+
 
 
 
@@ -83,6 +137,7 @@ h1{
   color:red;
   grid-column-start: 2;
   grid-column-end: 3;
+  margin-top:10px;
 }
 
 .button {
@@ -118,6 +173,8 @@ h1{
   font-family: 'Pokemon Solid';
   font-weight: normal;
   font-style: normal;
-  max-height:900px;
+  margin-top:20%;
+
 
 }
+/*--------------------------------------BODY END--------------------------------------------------*/
